--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Joel Warren's Portfolio Site'</title>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
-    <p><h1>Can you see it now</h1></p>
+    
 </body>
 </html>
