css layout adjustments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header id="mainHeader" class="mainHeader">
         <p>Test</p>
+        <h1>Test H1</h1>
     </header>
     
 </body>
