--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header id="mainHeader" class="mainHeader">
+    <header class="mainHeader">
         <p>Test</p>
         <h1>Test H1</h1>
     </header>
