Cache Busting Test

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title>Joel Warren's Portfolio Site</title>
-    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <link rel="stylesheet" type="text/css" href="main.css?<?=time()?>"/>
 </head>
 
 <body>
     <header class="mainHeader">
         <p>Test</p>
         <h1>Test H1</h1>
+        <h2>Test again</h2>
     </header>
     
 </body>
