--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Test</p>
         <h1>Test H1</h1>
         <h2>Test again</h2>
+        <h3>Test H3</h3>
     </header>
     
 </body>
