--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Joel Warren's Portfolio Site</title>
-    <link rel="stylesheet" type="text/css" href="main.css?<?=time()?>"/>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 
 <body>
