General Layout Completed (Home Page)

--- a/index.html
+++ b/index.html
@@ -3,20 +3,36 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
     <title>Joel Warren's Portfolio Site</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 
 <body>
     <header class="mainHeader">
-        <p>Test</p>
-        <h1>Test H1</h1>
-        <h2>Test again</h2>
-        <h3>Test H3</h3>
+        <h1>Joel Warren &#8984; | Portfolio Page | &#8984;</h1>
     </header>
-    
+    <nav class="navigation">
+        <h1>Links Go Here</h1>
+    </nav>
+    <section class="content1">
+        <article>
+            <h1>Content 1 - Section</h1>
+        </article>
+    </section>
+    <main class="mainContent">
+        <h1>Main Content</h1>
+    </main>
+    <aside class="asideMain">
+        <h1>Aside</h1>
+    </aside>
+    <section class="content2">
+        <article>
+            <h1>Content 2 - Section</h1>
+        </article>
+    </section>
+    <footer>
+        <h3>&copy; Joel Warren &#8611; Construction Underway &#8610; </h3>
+    </footer>
+
 </body>
 </html>
