Nav links update

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -12,15 +12,7 @@
         <h1>Joel Warren &#8984; | Portfolio Page | &#8984;</h1>
     </header>
     <nav class="navigation">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li>
-                <a href="#">HTML & CSS</a>
-                <ul>
-                    <li><a href="#">Front End Development</a></li>
-                </ul>
-            </li>
-        </ul>
+        <h1>Links Go Here</h1>
     </nav>
     <section class="content1">
         <article>
@@ -30,6 +22,9 @@
     <main class="mainContent">
         <h1>Main Content</h1>
     </main>
+    <aside class="asideMain">
+        <h1>Aside</h1>
+    </aside>
     <section class="content2">
         <article>
             <h1>Content 2 - Section</h1>
