Final Changes to the index.html Portfolio site until the Front end development pages are complete for the school project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <li>
                 <a href="#">HTML & CSS</a>
                 <ul>
-                    <li><a href="#">Front End Development</a></li>
+                    <li><a href="~/FrontEndDevelopmentD277/D277Main.html">Front End Development</a></li>
+                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Test</a></li>
                 </ul>
             </li>
         </ul>
