Fixed a relative link issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>
                 <a href="#">HTML & CSS</a>
                 <ul>
-                    <li><a href="~/FrontEndDevelopmentD277/D277Main.html">Front End Development</a></li>
+                    <li><a href="./FrontEndDevelopmentD277/D277Main.html">Front End Development</a></li>
                     <li><a href="#">Test</a></li>
                     <li><a href="#">Test</a></li>
                 </ul>
