--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -3,13 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Joel Warren's Portfolio Site</title>
+    <title>D277 Georgia - The Peach State</title>
     <link rel="stylesheet" type="text/css" href="D277Main.css" />
 </head>
 
 <body>
     <header class="mainHeader">
-        <h1>Joel Warren &#8984; | Portfolio Page | &#8984;</h1>
+        <h1>Georgia - The Peach State</h1>
+        <img src="./images/d277main/GeorgiaPeach.png" alt="Georgia Peach" height="73" width="93"/>
     </header>
     <nav class="navigation">
         <h1>Links Go Here</h1>
@@ -31,7 +32,7 @@
         </article>
     </section>
     <footer>
-        <h3>&copy; Joel Warren &#8611; Construction Underway &#8610; </h3>
+        <h5>&copy; Joel Warren &#8212; Western Governers Univeristy &#8212; D277 Front End Web Development | Dec 2023 | </h5>
     </footer>
 
 </body>
