--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -10,7 +10,7 @@
 <body>
     <header class="mainHeader">
         <h1>Georgia - The Peach State</h1>
-        <img src="Images/D277Main/GeorgiaPeach.png" alt="Georgia Peach" height="73" width="93"/>
+        <img src="./Images/D277Main/GeorgiaPeach.png" alt="Georgia Peach" height="73" width="93"/>
     </header>
     <nav class="navigation">
         <h1>Links Go Here</h1>
