--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -9,8 +9,14 @@
 
 <body>
     <header class="mainHeader">
-        <h1>Georgia - The Peach State</h1>
-        <img src="./Images/D277/GeorgiaPeach.png" alt="Georgia Peach" height="73" width="93"/>
+        <table>
+            <tr>
+                <td><img src="./Images/D277/GeorgiaPeach.png" alt="Georgia Peach" height="73" width="93" /></td>
+                <td><h1>The Peach State</h1></td>
+            </tr>
+        </table>
+        
+        
     </header>
     <nav class="navigation">
         <h1>Links Go Here</h1>
