--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>D277 Georgia - The Peach State</title>
-    <link rel="stylesheet" type="text/css" href="D277Main.css" />
+    <link rel="stylesheet" type="text/css" href="D277MainV1.0.css" />
 </head>
 
 <body>
