Updating CSS files for Readablity.

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -19,7 +19,17 @@
         
     </header>
     <nav class="navigation">
-        <h1>Links Go Here</h1>
+        <ul>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Main.html">Home</a></li>
+            <li>
+                <a href="#">Capital</a>
+                <ul>
+                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Test</a></li>
+                </ul>
+            </li>
+        </ul>
     </nav>
     <section class="content1">
         <article>
