Updating with Cache Buster

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -21,12 +21,12 @@
     <nav class="navigation">
         <ul>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Main.html">Home</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capital.html">Capital</a></li>
             <li>
-                <a href="#">Capital</a>
+                <a href="#">Cities</a>
                 <ul>
-                    <li><a href="#">Test</a></li>
-                    <li><a href="#">Test</a></li>
-                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Cities 1</a><li>
+                    <li><a href="#">Cities 2</a></li>
                 </ul>
             </li>
         </ul>
@@ -37,7 +37,19 @@
         </article>
     </section>
     <main class="mainContent">
-        <h1>Main Content</h1>
+        <table>
+            <tr>
+                <td>
+                    <ul>
+                        <li id="capitalBuilding"><img src="./Images/D277/GeorgiaStateCapitalBuilding.jpg" alt="State Capital Building" /></li>
+                        <li id="test"><img src="./Images/D277/GeorgiaPeach.png" alt="Test" /></li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><p>Capital Building &#8212; Atlanta, Ga</p></td>
+            </tr>
+        </table>
     </main>
     <aside class="asideMain">
         <h1>Aside</h1>
