error correction on the javascript, forgot to comment it out

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -76,7 +76,7 @@
 
             function displayImage(e) {
                 displayedImage.src = e.target.src;
-                window.alert(e.getAttribute('id'));
+                /*window.alert(e.getAttribute('id'));*/
             }
         })();
     </script>
