--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>D277 Georgia - The Peach State</title>
-    <link rel="stylesheet" type="text/css" href="D277MainV1.02.css" />
+    <link rel="stylesheet" type="text/css" href="D277MainV1.03.css" />
     
 </head>
 
@@ -22,7 +22,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Main.html">Home</a></li>
-            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capital.html">Capital</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capitol.html">Capital</a></li>
             <li>
                 <a href="#">Cities</a>
                 <ul>
@@ -36,51 +36,78 @@
     <section class="content1">
         <article>
             <h1>Interesting Facts</h1>
-            
-            <p id="13StarsFact">
-                Georgia was one of the original 13 colonies that were established by British colonists in North America in the 17th and 18th centuries.
-                Georgia was founded in 1732. The first settlement in Georgia was established in Savannah in 1733.
-                Georgia became a state in the United States on January 2, 1788.
+            <!-- I am using the inline style for the display property to make this first P element show when you open the page (javascript switch controls the rest) manual <br> tags are necessary here -->
+            <p id="13StarsFact" style="display:block">
+                    Georgia was one of the original 13 colonies that were established by British colonists in North America in the 17th and 18th centuries.<br /><br />
+                    Georgia was founded in 1732. The first settlement in Georgia was established in Savannah in 1733.<br /><br />
+                    Georgia became a state in the United States on January 2, 1788.<br /><br />
+            </p>
+            <p id="stateCapitolFact">
+                The Golden dome of the Georgia State Captol building was originally painted white when constructed in the late 1880's.<br /><br />
+                In 1959 the citizens of Lumpkin County donated enough gold to gild the dome and lantern, giving it its iconic shimmer.<br /><br />
+                The dome was regiled in 1981 to maintain its brilliance.<br /><br />
+            </p>
+            <p id="fishingStateFact">
+                Georgia has not 1 but 3 state fish. Largemouth Bass, Brook Trout, and Striped Bass.<br /><br />
+                Home of the Muskie. The "fish of 10,000 casts" is also the largest member of the pike family weighing in at over 50 pounds!<br /><br />
+                Georgia has a diverse landscape and offers mountain fishing, swamp fishing, and coastline saltwater fishing.<br /><br />
             </p>
         </article>
     </section>
     <main class="mainContent" id="imageDisplayed">
         <img src="./Images/D277/13StarsGeorgia.png" alt="" />
-        <!-- <p>Capital Building &#8212; Atlanta, Ga</p>-->
+        <!-- <p>Capitol Building &#8212; Atlanta, Ga</p>-->
     </main>
     <aside class="asideMain" id="thumbnailImages">
         <img id="13Stars" src="./Images/D277/13StarsGeorgia.png" />
-        <img id="Capital" src="./Images/D277/GeorgiaStateCapitalBuilding.jpg" />
+        <img id="Capitol" src="./Images/D277/GeorgiaStateCapitolBuilding.jpg" />
         <img id="Fishing" src="./Images/D277/FishingMap.jpg" />
-        <img id="Test4"src="./Images/D277/GeorgiaStateCapitalBuilding.jpg" />
-        <img id="Test5"src="./Images/D277/GeorgiaStateCapitalBuilding.jpg" />
-        <img id="Test6"src="./Images/D277/GeorgiaStateCapitalBuilding.jpg" />
     </aside>
     <section class="content2">
         <article>
-            <h1>Content 2 - Section</h1>
+            <h1>State Data</h1>
+            <ul>
+                <li><p>Population: 10,799,566</p></li>
+                <li><p>Founded: 1732</p></li>
+                <li><p>US State: 1788</p></li>
+                <li><p>Region: SouthEastern US</p></li>
+                <li><p>Classification: Urban / Rural</p></li>
+                <li><p>Median Income: $65,030</p></li>
+            </ul>
         </article>
     </section>
     <footer>
         <h5>&copy; Joel Warren &#8212; Western Governers Univeristy &#8212; D277 Front End Web Development | Dec 2023 | </h5>
     </footer>
 
-    <!-- I am loading this script here so that the HTML code will be loaded when the Script loads otherwise it will not change the "imageDisplayed" -->
+    <!-- I am loading this script here so that the HTML code will be loaded when the Script loads otherwise it will not change the properties -->
     <script>
         (function () {
 
             let displayedImage = document.querySelector("#imageDisplayed img");
             let selectedThumbnail = document.getElementById("thumbnailImages");
-            /*let hiddenP = document.querySelectorAll('.content1');*/
 
             selectedThumbnail.addEventListener("click", displayImage);
 
             function displayImage(e) {
                 displayedImage.src = e.target.src;
-                window.alert(e.target.id);
-                if (e.target.id == "13Stars") {
-                    window.alert("Pass the Statement!");
-                    document.getElementById('13StarsFact').style.display = "block";
+                /*window.alert(e.target.id);*/
+                switch (e.target.id) {
+                    case "13Stars":
+                        document.getElementById('13StarsFact').style.display = "block";
+                        document.getElementById('stateCapitolFact').style.display = "none";
+                        document.getElementById('fishingStateFact').style.display = "none";
+                        break;
+                    case "Capitol":
+                        document.getElementById('13StarsFact').style.display = "none";
+                        document.getElementById('stateCapitolFact').style.display = "block";
+                        document.getElementById('fishingStateFact').style.display = "none";
+                        break;
+                    case "Fishing":
+                        document.getElementById('13StarsFact').style.display = "none";
+                        document.getElementById('stateCapitolFact').style.display = "none";
+                        document.getElementById('fishingStateFact').style.display = "block";
+                        break;
                 }
             }
         })();
