added code to the capital.html files, fixed spelling errors

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -22,7 +22,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Main.html">Home</a></li>
-            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capitol.html">Capital</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capital.html">Capital</a></li>
             <li>
                 <a href="#">Cities</a>
                 <ul>
@@ -42,7 +42,7 @@
                     Georgia was founded in 1732. The first settlement in Georgia was established in Savannah in 1733.<br /><br />
                     Georgia became a state in the United States on January 2, 1788.<br /><br />
             </p>
-            <p id="stateCapitolFact">
+            <p id="stateCapitalFact">
                 The Golden dome of the Georgia State Captol building was originally painted white when constructed in the late 1880's.<br /><br />
                 In 1959 the citizens of Lumpkin County donated enough gold to gild the dome and lantern, giving it its iconic shimmer.<br /><br />
                 The dome was regiled in 1981 to maintain its brilliance.<br /><br />
@@ -95,17 +95,17 @@
                 switch (e.target.id) {
                     case "13Stars":
                         document.getElementById('13StarsFact').style.display = "block";
-                        document.getElementById('stateCapitolFact').style.display = "none";
+                        document.getElementById('stateCapitalFact').style.display = "none";
                         document.getElementById('fishingStateFact').style.display = "none";
                         break;
                     case "Capitol":
                         document.getElementById('13StarsFact').style.display = "none";
-                        document.getElementById('stateCapitolFact').style.display = "block";
+                        document.getElementById('stateCapitalFact').style.display = "block";
                         document.getElementById('fishingStateFact').style.display = "none";
                         break;
                     case "Fishing":
                         document.getElementById('13StarsFact').style.display = "none";
-                        document.getElementById('stateCapitolFact').style.display = "none";
+                        document.getElementById('stateCapitalFact').style.display = "none";
                         document.getElementById('fishingStateFact').style.display = "block";
                         break;
                 }
