--- a/FrontEndDevelopmentD277/D277Capital.html
+++ b/FrontEndDevelopmentD277/D277Capital.html
@@ -13,13 +13,14 @@
     </header>
     <nav class="navigation">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Main.html">Home</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Capital.html">Capital</a></li>
             <li>
-                <a href="#">HTML & CSS</a>
+                <a href="#">Cities</a>
                 <ul>
-                    <li><a href="./FrontEndDevelopmentD277/D277Main.html">Front End Development</a></li>
-                    <li><a href="#">Test</a></li>
-                    <li><a href="#">Test</a></li>
+                    <li><a href="#">Cities 1</a>
+                    <li>
+                    <li><a href="#">Cities 2</a></li>
                 </ul>
             </li>
         </ul>
