--- a/FrontEndDevelopmentD277/D277Capital.html
+++ b/FrontEndDevelopmentD277/D277Capital.html
@@ -3,8 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Capital of Georgia</title>
-    <link rel="stylesheet" type="text/css" href="mainv1.0.css" />
+    <title>D277 Capital of Georgia</title>
+    <link rel="stylesheet" type="text/css" href="D277MainV1.03.css" />
 </head>
 
 <body>
