Capital.html - major update on content + cache buster file rename on css files

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>D277 Georgia - The Peach State</title>
-    <link rel="stylesheet" type="text/css" href="D277MainV1.03.css" />
+    <link rel="stylesheet" type="text/css" href="D277MainV1.04.css" />
     
 </head>
 
@@ -26,8 +26,7 @@
             <li>
                 <a href="#">Cities</a>
                 <ul>
-                    <li><a href="#">Cities 1</a>
-                    <li>
+                    <li><a href="#">Cities 1</a></li>
                     <li><a href="#">Cities 2</a></li>
                 </ul>
             </li>
