Added Macon.html and jpg image- Beginning updates to content.

--- a/FrontEndDevelopmentD277/D277Macon.html
+++ b/FrontEndDevelopmentD277/D277Macon.html
@@ -34,29 +34,29 @@
     </nav>
     <section class="content1">
         <article>
-            <h1>History of Georgia Capitals</h1>
+            <h1>History of Macon Georgia</h1>
             <ul>
-                <li><h3>Savannah:</h3> <br />The first capital, serving as the center for the colony's government in 1733.</li>
-                <li><h3>Augusta:</h3> <br />The second capital, serving from 1785 to 1795.</li>
-                <li><h3>Louisville:</h3> <br />The thrid capital, serving in 1796.</li>
-                <li><h3>Milledgeville:</h3> <br />The fourth capital, serving from 1804 to 1868.</li>
-                <li><h3>Atlanta:</h3> <br />The fifth and current capital, serving since 1868.</li>
+                <li><h3>Fact 1</h3> <br />......</li>
+                <li><h3>Fact 2</h3> <br />......</li>
+                <li><h3>Fact 3</h3> <br />......</li>
+                <li><h3>Fact 4</h3> <br />......</li>
+                <li><h3>Fact 5</h3> <br />......</li>
             </ul>
         </article>
     </section>
     <main class="mainContent">
-        <img src="./Images/D277/GeorgiaStateCapitalsAll.png" alt="Map of Capitals Locations" />
+        <img src="./Images/D277/MaconGa.jpg" alt="Aerial view of Macon" />
     </main>
     <section class="content2">
         <article>
-            <h1>Atlanta City Data</h1>
+            <h1>Macon City Data</h1>
             <ul>
-                <li><p>Population: 490,270</p></li>
-                <li><p>Incorporated: 1847</p></li>
-                <li><p>Region: NorthWest Georgia</p></li>
-                <li><p>Classification: Metro / Urban</p></li>
-                <li><p>Median Income: $77,655</p></li>
-                <li><p>Median vs State Income: +19.40%</p></li>
+                <li><p>Population: 156,711</p></li>
+                <li><p>Incorporated: 1834</p></li>
+                <li><p>Region: Central Georgia</p></li>
+                <li><p>Classification: Urban</p></li>
+                <li><p>Median Income: $53,397</p></li>
+                <li><p>Median vs State Income: -17.89%</p></li>
             </ul>
         </article>
     </section>
