Completion of Macon.html content and CSS changes to accomidate the City Layouts design. Along with a cache buster rename of the CSS file D277MainC1.04.css file

--- a/FrontEndDevelopmentD277/D277Macon.html
+++ b/FrontEndDevelopmentD277/D277Macon.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>D277 Georgia - The Peach State</title>
-    <link rel="stylesheet" type="text/css" href="D277MainV1.04.css" />
+    <link rel="stylesheet" type="text/css" href="D277MainV1.05.css" />
 
 </head>
 
-<body id="centered3Columns">
+<body id="cityLayout">
     <header class="mainHeader">
         <table>
             <tr>
@@ -16,8 +16,6 @@
                 <td><h1>The Peach State</h1></td>
             </tr>
         </table>
-
-
     </header>
     <nav class="navigation">
         <ul>
@@ -32,21 +30,19 @@
             </li>
         </ul>
     </nav>
-    <section class="content1">
-        <article>
-            <h1>History of Macon Georgia</h1>
-            <ul>
-                <li><h3>Fact 1</h3> <br />......</li>
-                <li><h3>Fact 2</h3> <br />......</li>
-                <li><h3>Fact 3</h3> <br />......</li>
-                <li><h3>Fact 4</h3> <br />......</li>
-                <li><h3>Fact 5</h3> <br />......</li>
-            </ul>
-        </article>
-    </section>
     <main class="mainContent">
         <img src="./Images/D277/MaconGa.jpg" alt="Aerial view of Macon" />
     </main>
+    <section class="asideCityLayout">
+        <aside>
+            <h1>Interesting Facts - Macon Georgia</h1>
+            <ul>
+                <li><h3>Cherry Blossom Capital of the World:</h3> <br />300,000 Yoshino cherry trees bloom in the streets of Macon around March of every year drawing in crowds for the International Cherry Blossom Festival.</li>
+                <li><h3>Musical heritage:</h3> <br />Music is a big part of Macon's history. The Allman Brothers Band, Little Richard, James Brown, and Otis Redding all got their start in Macon. Labels such as Capricorn Records also call Macon its home. </li>
+                <li><h3>Filming in 3..2..1:</h3> <br />Macon offers a diverse landscape that provides both historic charm and natural beauty. This coupled with the Macon Film Commission and generous tax credits creates a versatile environment capable of providing a small-town America to bustling Southern City setting for filming.</li>
+            </ul>
+        </aside>
+    </section>
     <section class="content2">
         <article>
             <h1>Macon City Data</h1>
