Code Cleanup D277Main.html

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -54,13 +54,12 @@
         </article>
     </section>
     <main class="mainContent" id="imageDisplayed">
-        <img src="./Images/D277/13StarsGeorgia.png" alt="" />
-        <!-- <p>Capitol Building &#8212; Atlanta, Ga</p>-->
+        <img src="./Images/D277/13StarsGeorgia.png" alt="Rotating Image" />
     </main>
     <aside class="asideMain" id="thumbnailImages">
-        <img id="13Stars" src="./Images/D277/13StarsGeorgia.png" />
-        <img id="Capitol" src="./Images/D277/GeorgiaStateCapitolBuilding.jpg" />
-        <img id="Fishing" src="./Images/D277/FishingMap.jpg" />
+        <img id="13Stars" src="./Images/D277/13StarsGeorgia.png" alt="thumbnail of Georgia's flag with 13 stars" />
+        <img id="Capitol" src="./Images/D277/GeorgiaStateCapitolBuilding.jpg" alt="thumbnail of Georgia's state Capitol building" />
+        <img id="Fishing" src="./Images/D277/FishingMap.jpg" alt="thumbnail of Georgia's fishingmap" />
     </aside>
     <section class="content2">
         <article>
