Code Cleanup D277Capital.html

--- a/FrontEndDevelopmentD277/D277Capital.html
+++ b/FrontEndDevelopmentD277/D277Capital.html
@@ -45,7 +45,7 @@
         </article>
     </section>
     <main class="mainContent">
-        <img src="./Images/D277/GeorgiaStateCapitalsAll.png" alt="Map of Capitals Locations" />
+        <img src="./Images/D277/GeorgiaStateCapitalsAll.png" alt="Map of Capital's Locations" />
     </main>
     <section class="content2">
         <article>
@@ -63,11 +63,6 @@
     <footer>
         <h5>&copy; Joel Warren &#8212; Western Governers Univeristy &#8212; D277 Front End Web Development | Dec 2023 | </h5>
     </footer>
-
-    
-    <!-- <script>
-        
-    </script> -->
 </body>
 
 </html>
