Dublin.html Initial page completion, WIll check for errros etc next

--- a/FrontEndDevelopmentD277/D277Dublin.html
+++ b/FrontEndDevelopmentD277/D277Dublin.html
@@ -35,11 +35,11 @@
     </main>
     <section class="asideCityLayout">
         <aside>
-            <h1>Interesting Facts - Macon Georgia</h1>
+            <h1>Interesting Facts - Dublin Georgia</h1>
             <ul>
-                <li><h3>Cherry Blossom Capital of the World:</h3> <br />300,000 Yoshino cherry trees bloom in the streets of Macon around March of every year drawing in crowds for the International Cherry Blossom Festival.</li>
-                <li><h3>Musical heritage:</h3> <br />Music is a big part of Macon's history. The Allman Brothers Band, Little Richard, James Brown, and Otis Redding all got their start in Macon. Labels such as Capricorn Records also call Macon its home. </li>
-                <li><h3>Filming in 3..2..1:</h3> <br />Macon offers a diverse landscape that provides both historic charm and natural beauty. This coupled with the Macon Film Commission and generous tax credits creates a versatile environment capable of providing a small-town America to bustling Southern City setting for filming.</li>
+                <li><h3>Irish roots:</h3> <br />Dublin was founded on December 9th in 1812 by Jonathan Sawyer, an Irish immigrant who agreed to donate land for public buildings in exchange for naming the town after his wife's ancestral home in Dublin, Ireland.</li>
+                <li><h3>Annual Peanut Festival:</h3> <br />A festival held each October, featuring parades, music, and plenty of peanut treats.</li>
+                <li><h3>Activities:</h3> <br />Venues at Dublin Carnegie and Theatre Dublin offer local artwork, live music, and theatrical performances. Dublin Greenway and the local Oconee River provide hiking, biking, and fishing.</li>
             </ul>
         </aside>
     </section>
@@ -47,12 +47,12 @@
         <article>
             <h1>Macon City Data</h1>
             <ul>
-                <li><p>Population: 156,711</p></li>
-                <li><p>Incorporated: 1834</p></li>
-                <li><p>Region: Central Georgia</p></li>
-                <li><p>Classification: Urban</p></li>
-                <li><p>Median Income: $53,397</p></li>
-                <li><p>Median vs State Income: -17.89%</p></li>
+                <li><p>Population: 16,101</p></li>
+                <li><p>Incorporated: 1812</p></li>
+                <li><p>Region: Eastern Georgia</p></li>
+                <li><p>Classification: Rural</p></li>
+                <li><p>Median Income: $37,734</p></li>
+                <li><p>Median vs State Income: -41.97%</p></li>
             </ul>
         </article>
     </section>
