dublin city data H1 data

--- a/FrontEndDevelopmentD277/D277Dublin.html
+++ b/FrontEndDevelopmentD277/D277Dublin.html
@@ -45,7 +45,7 @@
     </section>
     <section class="content2">
         <article>
-            <h1>Macon City Data</h1>
+            <h1>Dublin City Data</h1>
             <ul>
                 <li><p>Population: 16,101</p></li>
                 <li><p>Incorporated: 1812</p></li>
