Completion of D277InfoPage.html + creation of D277ContactUs.html

--- a/FrontEndDevelopmentD277/D277Capital.html
+++ b/FrontEndDevelopmentD277/D277Capital.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>D277 Georgia - The Peach State</title>
+    <title>D277 Atlanta Georgia information 30303</title>
     <link rel="stylesheet" type="text/css" href="D277MainV1.05.css" />
 
 </head>
@@ -30,6 +30,7 @@
                     <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Dublin.html">Dublin</a></li>
                 </ul>
             </li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
         </ul>
     </nav>
     <section class="content1">
