--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -30,6 +30,7 @@
                     <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Dublin.html">Dublin</a></li>
                 </ul>
             </li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
         </ul>
     </nav>
     <section class="content1">
