--- a/FrontEndDevelopmentD277/D277Dublin.html
+++ b/FrontEndDevelopmentD277/D277Dublin.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>D277 Georgia - The Peach State</title>
+    <title>D277 Dublin Georgia information 31021</title>
     <link rel="stylesheet" type="text/css" href="D277MainV1.05.css" />
 
 </head>
@@ -28,6 +28,7 @@
                     <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277Dublin.html">Dublin</a></li>
                 </ul>
             </li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
         </ul>
     </nav>
     <main class="mainContent">
