Contact us page complete + CSS cache buster rename

--- a/FrontEndDevelopmentD277/D277Main.html
+++ b/FrontEndDevelopmentD277/D277Main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>D277 Georgia - The Peach State</title>
-    <link rel="stylesheet" type="text/css" href="D277MainV1.05.css" />
+    <link rel="stylesheet" type="text/css" href="D277MainV1.06.css" />
     
 </head>
 
@@ -31,6 +31,8 @@
                 </ul>
             </li>
             <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277InfoPage.html">More Information</a></li>
+            <li><a href="https://www.csharpdeveloper.io/FrontEndDevelopmentD277/D277ContacusUs.html">Contact Us</a></li>
+            <li id="mainProfilePageReturn"><a href="https://www.csharpdeveloper.io">Return To Main Profile Page</a></li>
         </ul>
     </nav>
     <section class="content1">
